--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "description": "Gatsby Blog, 'Borderless' Theme By Junhobaik",
   "version": "4.0.0",
-  "author": "JunhoBaik",
+  "author": "kozistr",
   "keywords": [
     "gatsby",
     "pnpm"
@@ -17,7 +17,7 @@
     "url": "https://github.com/kozistr/kozistr.github.io/issues"
   },
   "scripts": {
-    "init": "pnpm install -g gatsby-cli npm-check-updates cross-env",
+    "init": "pnpm install -g gatsby-cli@4.24.0 npm-check-updates cross-env",
     "develop": "gatsby develop",
     "build": "cross-env GATSBY_CPU_COUNT=8 GATSBY_EXPERIMENTAL_QUERY_CONCURRENCY=8 GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --prefix-paths --write-to-file --log-pages",
     "serve": "gatsby serve",
@@ -41,6 +41,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@gatsbyjs/reach-router": "^1.3.9",
+    "@giscus/react" : "^2.2.3",
     "@mdx-js/react": "1.6.22",
     "cross-env": "^7.0.3",
     "disqus-react": "^1.1.3",
