--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "gatsby-source-filesystem": "^5.2.0",
     "gatsby-transformer-remark": "^6.2.0",
     "gatsby-transformer-sharp": "^5.2.0",
-    "katex": "~0.13.3",
+    "katex": "0.13.24",
     "lodash": "^4.17.21",
     "mobile-detect": "^1.4.5",
     "moment": "^2.29.4",
@@ -86,7 +86,7 @@
     "react-helmet": "^6.1.0",
     "react-redux": "^8.0.5",
     "react-share": "^4.4.1",
-    "react-typography": "^0.16.20",
+    "react-typography": "^0.16.23",
     "redux": "^4.2.0",
     "terser": "^5.16.1",
     "theme-ui": "^0.15.4",
@@ -99,8 +99,8 @@
     "@types/react-helmet": "^6.1.6",
     "@types/react-redux": "^7.1.24",
     "@types/typography": "^0.16.4",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
-    "@typescript-eslint/parser": "^5.45.0",
+    "@typescript-eslint/eslint-plugin": "^5.46.0",
+    "@typescript-eslint/parser": "^5.46.0",
     "autoprefixer": "^10.4.13",
     "eslint": "~8.29.0",
     "eslint-config-prettier": "^8.5.0",
@@ -109,8 +109,8 @@
     "eslint-plugin-react": "^7.31.11",
     "gh-pages": "^4.0.0",
     "postcss": "^8.4.19",
-    "prettier": "^2.8.0",
+    "prettier": "^2.8.1",
     "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.4"
   }
 }
