--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "cross-env GATSBY_CPU_COUNT=8 GATSBY_EXPERIMENTAL_QUERY_CONCURRENCY=8 GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --prefix-paths --write-to-file --log-pages",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "deploy": "pnpm run build && gh-pages -b master -d public",
+    "deploy": "pnpm run build && gh-pages -b main -d public",
     "format": "prettier --write \"**/*.{js,jsx,json,scss,tsx,ts}\"",
     "lint": "eslint --ext .js,.jsx --ignore-pattern public .",
     "update": "npm-check-updates -u"
