--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@gatsbyjs/reach-router": "^2.0.0",
-    "@giscus/react": "^2.2.4",
+    "@giscus/react": "^2.2.6",
     "@mdx-js/react": "2.2.1",
     "cross-env": "^7.0.3",
     "gatsby": "^5.3.2",
@@ -80,9 +80,9 @@
     "prism-themes": "^1.9.0",
     "prismjs": "^1.29.0",
     "prop-types": "^15.8.1",
-    "react": "~18.2.0",
+    "react": "^18.2.0",
     "react-adsense": "^0.1.0",
-    "react-dom": "~18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-redux": "^8.0.5",
     "react-share": "^4.4.1",
@@ -102,7 +102,7 @@
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
     "autoprefixer": "^10.4.13",
-    "eslint": "~8.29.0",
+    "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -112,5 +112,12 @@
     "prettier": "^2.8.1",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4"
+  },
+  "pnpm": {
+    "overrides": {
+      "loader-utils@<1.4.1": ">=1.4.1",
+      "loader-utils@>=1.0.0 <1.4.2": ">=1.4.2",
+      "engine.io@>=4.0.0 <6.2.1": ">=6.2.1"
+    }
   }
 }
