--- a/package.json
+++ b/package.json
@@ -99,8 +99,8 @@
     "@types/react-helmet": "^6.1.6",
     "@types/react-redux": "^7.1.24",
     "@types/typography": "^0.16.4",
-    "@typescript-eslint/eslint-plugin": "^5.47.0",
-    "@typescript-eslint/parser": "^5.47.0",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
@@ -117,7 +117,8 @@
     "overrides": {
       "loader-utils@<1.4.1": ">=1.4.1",
       "loader-utils@>=1.0.0 <1.4.2": ">=1.4.2",
-      "engine.io@>=4.0.0 <6.2.1": ">=6.2.1"
+      "engine.io@>=4.0.0 <6.2.1": ">=6.2.1",
+      "json5@<2.2.2": ">=2.2.2"
     }
   }
 }
