--- a/package.json
+++ b/package.json
@@ -45,32 +45,32 @@
     "@giscus/react": "^2.2.6",
     "@mdx-js/react": "2.2.1",
     "cross-env": "^7.0.3",
-    "gatsby": "^5.4.2",
-    "gatsby-plugin-feed": "^5.4.0",
-    "gatsby-plugin-google-analytics": "^5.4.0",
-    "gatsby-plugin-image": "^3.4.0",
-    "gatsby-plugin-manifest": "^5.4.0",
-    "gatsby-plugin-offline": "^6.4.0",
+    "gatsby": "^5.5.0",
+    "gatsby-plugin-feed": "^5.5.0",
+    "gatsby-plugin-google-analytics": "^5.5.0",
+    "gatsby-plugin-image": "^3.5.0",
+    "gatsby-plugin-manifest": "^5.5.0",
+    "gatsby-plugin-offline": "^6.5.0",
     "gatsby-plugin-pnpm": "^1.2.10",
-    "gatsby-plugin-react-helmet": "^6.4.0",
+    "gatsby-plugin-react-helmet": "^6.5.0",
     "gatsby-plugin-remove-fingerprints": "^0.0.2",
     "gatsby-plugin-robots-txt": "^1.8.0",
-    "gatsby-plugin-sass": "^6.4.0",
-    "gatsby-plugin-sharp": "^5.4.0",
-    "gatsby-plugin-sitemap": "^6.4.0",
+    "gatsby-plugin-sass": "^6.5.0",
+    "gatsby-plugin-sharp": "^5.5.0",
+    "gatsby-plugin-sitemap": "^6.5.0",
     "gatsby-plugin-theme-ui": "^0.15.4",
-    "gatsby-plugin-typescript": "^5.4.0",
-    "gatsby-plugin-typography": "^5.4.0",
-    "gatsby-remark-autolink-headers": "^6.4.0",
-    "gatsby-remark-copy-linked-files": "^6.4.0",
+    "gatsby-plugin-typescript": "^5.5.0",
+    "gatsby-plugin-typography": "^5.5.0",
+    "gatsby-remark-autolink-headers": "^6.5.0",
+    "gatsby-remark-copy-linked-files": "^6.5.0",
     "gatsby-remark-emojis": "^0.4.3",
     "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-images": "^7.4.0",
-    "gatsby-remark-katex": "^7.4.0",
-    "gatsby-remark-prismjs": "^7.4.0",
-    "gatsby-source-filesystem": "^5.4.0",
-    "gatsby-transformer-remark": "^6.4.0",
-    "gatsby-transformer-sharp": "^5.4.0",
+    "gatsby-remark-images": "^7.5.0",
+    "gatsby-remark-katex": "^7.5.0",
+    "gatsby-remark-prismjs": "^7.5.0",
+    "gatsby-source-filesystem": "^5.5.0",
+    "gatsby-transformer-remark": "^6.5.0",
+    "gatsby-transformer-sharp": "^5.5.0",
     "katex": "0.13.24",
     "lodash": "^4.17.21",
     "mobile-detect": "^1.4.5",
@@ -99,15 +99,15 @@
     "@types/react-helmet": "^6.1.6",
     "@types/react-redux": "^7.1.25",
     "@types/typography": "^0.16.4",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.32.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.1",
-    "gh-pages": "^4.0.0",
+    "gh-pages": "^5.0.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "tailwindcss": "^3.2.4",
@@ -118,7 +118,8 @@
       "loader-utils@<1.4.1": ">=1.4.1",
       "loader-utils@>=1.0.0 <1.4.2": ">=1.4.2",
       "engine.io@>=4.0.0 <6.2.1": ">=6.2.1",
-      "json5@<2.2.2": ">=2.2.2"
+      "json5@<2.2.2": ">=2.2.2",
+      "ua-parser-js@<0.7.33": ">=0.7.33"
     }
   }
 }
