--- a/package.json
+++ b/package.json
@@ -36,41 +36,41 @@
   ],
   "dependencies": {
     "@emotion/react": "^11.10.5",
-    "@fortawesome/fontawesome-svg-core": "^6.2.1",
-    "@fortawesome/free-brands-svg-icons": "^6.2.1",
-    "@fortawesome/free-regular-svg-icons": "^6.2.1",
-    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@gatsbyjs/reach-router": "^2.0.1",
     "@giscus/react": "^2.2.6",
     "@mdx-js/react": "2.2.1",
     "cross-env": "^7.0.3",
-    "gatsby": "^5.5.0",
-    "gatsby-plugin-feed": "^5.5.0",
-    "gatsby-plugin-google-gtag": "^5.5.0",
-    "gatsby-plugin-image": "^3.5.0",
-    "gatsby-plugin-manifest": "^5.5.0",
-    "gatsby-plugin-offline": "^6.5.0",
+    "gatsby": "^5.6.0",
+    "gatsby-plugin-feed": "^5.6.0",
+    "gatsby-plugin-google-gtag": "^5.6.0",
+    "gatsby-plugin-image": "^3.6.0",
+    "gatsby-plugin-manifest": "^5.6.0",
+    "gatsby-plugin-offline": "^6.6.0",
     "gatsby-plugin-pnpm": "^1.2.10",
-    "gatsby-plugin-react-helmet": "^6.5.0",
+    "gatsby-plugin-react-helmet": "^6.6.0",
     "gatsby-plugin-remove-fingerprints": "^0.0.2",
     "gatsby-plugin-robots-txt": "^1.8.0",
-    "gatsby-plugin-sass": "^6.5.0",
-    "gatsby-plugin-sharp": "^5.5.0",
-    "gatsby-plugin-sitemap": "^6.5.0",
-    "gatsby-plugin-theme-ui": "^0.15.4",
-    "gatsby-plugin-typescript": "^5.5.0",
-    "gatsby-plugin-typography": "^5.5.0",
-    "gatsby-remark-autolink-headers": "^6.5.0",
-    "gatsby-remark-copy-linked-files": "^6.5.0",
+    "gatsby-plugin-sass": "^6.6.0",
+    "gatsby-plugin-sharp": "^5.6.0",
+    "gatsby-plugin-sitemap": "^6.6.0",
+    "gatsby-plugin-theme-ui": "^0.15.5",
+    "gatsby-plugin-typescript": "^5.6.0",
+    "gatsby-plugin-typography": "^5.6.0",
+    "gatsby-remark-autolink-headers": "^6.6.0",
+    "gatsby-remark-copy-linked-files": "^6.6.0",
     "gatsby-remark-emojis": "^0.4.3",
     "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-images": "^7.5.0",
-    "gatsby-remark-katex": "^7.5.0",
-    "gatsby-remark-prismjs": "^7.5.0",
-    "gatsby-source-filesystem": "^5.5.0",
-    "gatsby-transformer-remark": "^6.5.0",
-    "gatsby-transformer-sharp": "^5.5.0",
+    "gatsby-remark-images": "^7.6.0",
+    "gatsby-remark-katex": "^7.6.0",
+    "gatsby-remark-prismjs": "^7.6.0",
+    "gatsby-source-filesystem": "^5.6.0",
+    "gatsby-transformer-remark": "^6.6.0",
+    "gatsby-transformer-sharp": "^5.6.0",
     "katex": "0.13.24",
     "lodash": "^4.17.21",
     "mobile-detect": "^1.4.5",
@@ -88,8 +88,8 @@
     "react-share": "^4.4.1",
     "react-typography": "^0.16.23",
     "redux": "^4.2.1",
-    "terser": "^5.16.2",
-    "theme-ui": "^0.15.4",
+    "terser": "^5.16.3",
+    "theme-ui": "^0.15.5",
     "typography": "^0.16.21"
   },
   "devDependencies": {
@@ -99,8 +99,8 @@
     "@types/react-helmet": "^6.1.6",
     "@types/react-redux": "^7.1.25",
     "@types/typography": "^0.16.4",
-    "@typescript-eslint/eslint-plugin": "^5.50.0",
-    "@typescript-eslint/parser": "^5.50.0",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
@@ -109,8 +109,8 @@
     "eslint-plugin-react": "^7.32.2",
     "gh-pages": "^5.0.0",
     "postcss": "^8.4.21",
-    "prettier": "^2.8.3",
-    "tailwindcss": "^3.2.4",
+    "prettier": "^2.8.4",
+    "tailwindcss": "^3.2.6",
     "typescript": "^4.9.5"
   },
   "pnpm": {
@@ -119,7 +119,9 @@
       "loader-utils@>=1.0.0 <1.4.2": ">=1.4.2",
       "engine.io@>=4.0.0 <6.2.1": ">=6.2.1",
       "json5@<2.2.2": ">=2.2.2",
-      "ua-parser-js@<0.7.33": ">=0.7.33"
+      "ua-parser-js@<0.7.33": ">=0.7.33",
+      "http-cache-semantics@<4.1.1": ">=4.1.1",
+      "@sideway/formula@<3.0.1": ">=3.0.1"
     }
   }
 }
