--- a/package.json
+++ b/package.json
@@ -99,8 +99,8 @@
     "@types/react-helmet": "^6.1.6",
     "@types/react-redux": "^7.1.25",
     "@types/typography": "^0.16.4",
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "@typescript-eslint/parser": "^5.54.1",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.7.0",
@@ -109,9 +109,9 @@
     "eslint-plugin-react": "^7.32.2",
     "gh-pages": "^5.0.0",
     "postcss": "^8.4.21",
-    "prettier": "^2.8.4",
+    "prettier": "^2.8.5",
     "tailwindcss": "^3.2.7",
-    "typescript": "^4.9.5"
+    "typescript": "^5.0.2"
   },
   "pnpm": {
     "overrides": {
@@ -121,7 +121,8 @@
       "json5@<2.2.2": ">=2.2.2",
       "ua-parser-js@<0.7.33": ">=0.7.33",
       "http-cache-semantics@<4.1.1": ">=4.1.1",
-      "@sideway/formula@<3.0.1": ">=3.0.1"
+      "@sideway/formula@<3.0.1": ">=3.0.1",
+      "webpack@>=5.0.0 <5.76.0": ">=5.76.0"
     }
   }
 }
