--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     ">0.25%, not dead and supports es6-module"
   ],
   "dependencies": {
-    "@emotion/react": "^11.10.8",
+    "@emotion/react": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
@@ -45,37 +45,37 @@
     "@giscus/react": "^2.2.8",
     "@mdx-js/react": "2.3.0",
     "cross-env": "^7.0.3",
-    "gatsby": "^5.9.0",
-    "gatsby-plugin-feed": "^5.9.0",
-    "gatsby-plugin-google-gtag": "^5.9.0",
-    "gatsby-plugin-image": "^3.9.0",
-    "gatsby-plugin-manifest": "^5.9.0",
-    "gatsby-plugin-offline": "^6.9.0",
+    "gatsby": "^5.10.0",
+    "gatsby-plugin-feed": "^5.10.0",
+    "gatsby-plugin-google-gtag": "^5.10.0",
+    "gatsby-plugin-image": "^3.10.0",
+    "gatsby-plugin-manifest": "^5.10.0",
+    "gatsby-plugin-offline": "^6.10.0",
     "gatsby-plugin-pnpm": "^1.2.10",
-    "gatsby-plugin-react-helmet": "^6.9.0",
+    "gatsby-plugin-react-helmet": "^6.10.0",
     "gatsby-plugin-remove-fingerprints": "^0.0.2",
     "gatsby-plugin-robots-txt": "^1.8.0",
-    "gatsby-plugin-sass": "^6.9.0",
-    "gatsby-plugin-sharp": "^5.9.0",
-    "gatsby-plugin-sitemap": "^6.9.0",
+    "gatsby-plugin-sass": "^6.10.0",
+    "gatsby-plugin-sharp": "^5.10.0",
+    "gatsby-plugin-sitemap": "^6.10.0",
     "gatsby-plugin-theme-ui": "^0.15.7",
-    "gatsby-plugin-typescript": "^5.9.0",
-    "gatsby-plugin-typography": "^5.9.0",
-    "gatsby-remark-autolink-headers": "^6.9.0",
-    "gatsby-remark-copy-linked-files": "^6.9.0",
+    "gatsby-plugin-typescript": "^5.10.0",
+    "gatsby-plugin-typography": "^5.10.0",
+    "gatsby-remark-autolink-headers": "^6.10.0",
+    "gatsby-remark-copy-linked-files": "^6.10.0",
     "gatsby-remark-emojis": "^0.4.3",
     "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-images": "^7.9.0",
-    "gatsby-remark-katex": "^7.9.0",
-    "gatsby-remark-prismjs": "^7.9.0",
-    "gatsby-source-filesystem": "^5.9.0",
-    "gatsby-transformer-remark": "^6.9.0",
-    "gatsby-transformer-sharp": "^5.9.0",
-    "katex": "0.13.24",
+    "gatsby-remark-images": "^7.10.0",
+    "gatsby-remark-katex": "^7.10.0",
+    "gatsby-remark-prismjs": "^7.10.0",
+    "gatsby-source-filesystem": "^5.10.0",
+    "gatsby-transformer-remark": "^6.10.0",
+    "gatsby-transformer-sharp": "^5.10.0",
+    "katex": "0.16.7",
     "lodash": "^4.17.21",
     "mobile-detect": "^1.4.5",
     "moment": "^2.29.4",
-    "node-sass": "^8.0.0",
+    "node-sass": "^9.0.0",
     "parse-path": "^7.0.0",
     "prism-themes": "^1.9.0",
     "prismjs": "^1.29.0",
@@ -88,21 +88,21 @@
     "react-share": "^4.4.1",
     "react-typography": "^0.16.23",
     "redux": "^4.2.1",
-    "terser": "^5.17.1",
+    "terser": "^5.17.6",
     "theme-ui": "^0.15.7",
     "typography": "^0.16.21"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.194",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.1",
+    "@types/react": "^18.2.7",
+    "@types/react-dom": "^18.2.4",
     "@types/react-helmet": "^6.1.6",
     "@types/react-redux": "^7.1.25",
     "@types/typography": "^0.16.4",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.39.0",
+    "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
@@ -123,7 +123,8 @@
       "http-cache-semantics@<4.1.1": ">=4.1.1",
       "@sideway/formula@<3.0.1": ">=3.0.1",
       "webpack@>=5.0.0 <5.76.0": ">=5.76.0",
-      "yaml@>=2.0.0-5 <2.2.2": ">=2.2.2"
+      "yaml@>=2.0.0-5 <2.2.2": ">=2.2.2",
+      "socket.io-parser@>=4.0.4 <4.2.3": ">=4.2.3"
     }
   }
 }
