--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@gatsbyjs/reach-router": "^2.0.1",
-    "@giscus/react": "^2.2.8",
+    "@giscus/react": "^2.3.0",
     "@mdx-js/react": "2.3.0",
     "cross-env": "^7.0.3",
     "gatsby": "^5.11.0",
@@ -71,7 +71,7 @@
     "gatsby-source-filesystem": "^5.11.0",
     "gatsby-transformer-remark": "^6.11.0",
     "gatsby-transformer-sharp": "^5.11.0",
-    "katex": "0.16.7",
+    "katex": "0.16.8",
     "lodash": "^4.17.21",
     "mobile-detect": "^1.4.5",
     "moment": "^2.29.4",
@@ -84,34 +84,34 @@
     "react-adsense": "^0.1.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-redux": "^8.1.0",
+    "react-redux": "^8.1.1",
     "react-share": "^4.4.1",
     "react-typography": "^0.16.23",
     "redux": "^4.2.1",
-    "terser": "^5.18.1",
+    "terser": "^5.19.1",
     "theme-ui": "^0.16.0",
-    "typography": "^0.16.21"
+    "typography": "^0.16.24"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.195",
-    "@types/react": "^18.2.13",
-    "@types/react-dom": "^18.2.6",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
     "@types/react-helmet": "^6.1.6",
     "@types/react-redux": "^7.1.25",
     "@types/typography": "^0.16.4",
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
-    "@typescript-eslint/parser": "^5.60.0",
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
+    "@typescript-eslint/parser": "^6.1.0",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.43.0",
+    "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.0",
     "gh-pages": "^5.0.0",
-    "postcss": "^8.4.24",
-    "prettier": "^2.8.8",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^5.1.3"
+    "postcss": "^8.4.26",
+    "prettier": "^3.0.0",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.1.6"
   },
   "pnpm": {
     "overrides": {
@@ -124,7 +124,11 @@
       "@sideway/formula@<3.0.1": ">=3.0.1",
       "webpack@>=5.0.0 <5.76.0": ">=5.76.0",
       "yaml@>=2.0.0-5 <2.2.2": ">=2.2.2",
-      "socket.io-parser@>=4.0.4 <4.2.3": ">=4.2.3"
+      "socket.io-parser@>=4.0.4 <4.2.3": ">=4.2.3",
+      "semver@<5.7.2": ">=5.7.2",
+      "semver@>=6.0.0 <6.3.1": ">=6.3.1",
+      "semver@>=7.0.0 <7.5.2": ">=7.5.2",
+      "word-wrap@<1.2.4": ">=1.2.4"
     }
   }
 }
