--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@giscus/react": "^2.3.0",
     "@mdx-js/react": "2.3.0",
     "cross-env": "^7.0.3",
-    "gatsby": "^5.12.4",
+    "gatsby": "^5.12.5",
     "gatsby-plugin-feed": "^5.12.0",
     "gatsby-plugin-google-gtag": "^5.12.0",
     "gatsby-plugin-image": "^3.12.0",
@@ -71,7 +71,7 @@
     "gatsby-source-filesystem": "^5.12.0",
     "gatsby-transformer-remark": "^6.12.0",
     "gatsby-transformer-sharp": "^5.12.0",
-    "katex": "0.16.8",
+    "katex": "0.16.9",
     "lodash": "^4.17.21",
     "mobile-detect": "^1.4.5",
     "moment": "^2.29.4",
@@ -84,31 +84,31 @@
     "react-adsense": "^0.1.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-redux": "^8.1.2",
+    "react-redux": "^8.1.3",
     "react-share": "^4.4.1",
     "react-typography": "^0.16.23",
     "redux": "^4.2.1",
-    "terser": "^5.19.4",
+    "terser": "^5.21.0",
     "theme-ui": "^0.16.1",
     "typography": "^0.16.24"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.198",
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7",
-    "@types/react-helmet": "^6.1.6",
-    "@types/react-redux": "^7.1.26",
+    "@types/lodash": "^4.14.199",
+    "@types/react": "^18.2.24",
+    "@types/react-dom": "^18.2.8",
+    "@types/react-helmet": "^6.1.7",
+    "@types/react-redux": "^7.1.27",
     "@types/typography": "^0.16.5",
-    "@typescript-eslint/eslint-plugin": "^6.7.0",
-    "@typescript-eslint/parser": "^6.7.0",
-    "autoprefixer": "^10.4.15",
-    "eslint": "^8.49.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.33.2",
     "gh-pages": "^6.0.0",
-    "postcss": "^8.4.29",
+    "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2"
@@ -128,7 +128,9 @@
       "semver@<5.7.2": ">=5.7.2",
       "semver@>=6.0.0 <6.3.1": ">=6.3.1",
       "semver@>=7.0.0 <7.5.2": ">=7.5.2",
-      "word-wrap@<1.2.4": ">=1.2.4"
+      "word-wrap@<1.2.4": ">=1.2.4",
+      "graphql@>=16.3.0 <16.8.1": ">=16.8.1",
+      "postcss@<8.4.31": ">=8.4.31"
     }
   }
 }
