--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "display": "Node 20",
   "compilerOptions": {
+    "typeRoots": ["node_modules/@types"],
     "target": "es2021",
     "module": "commonjs",
     "lib": ["es2021", "DOM"],
