--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "@mdx-js/react": "^3.0.1",
     "@reduxjs/toolkit": "^2.2.5",
     "cross-env": "^7.0.3",
+    "css-minimizer-webpack-plugin": "^7.0.0",
+    "envify": "^4.1.0",
     "gatsby": "^5.13.5",
     "gatsby-plugin-feed": "^5.13.1",
     "gatsby-plugin-google-gtag": "^5.13.1",
