--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-manifest": "^5.13.1",
     "gatsby-plugin-offline": "^6.13.2",
-    "gatsby-plugin-pnpm": "^1.2.10",
+    "gatsby-plugin-pnpm-gatsby-5": "^1.2.11",
     "gatsby-plugin-react-helmet": "^6.13.1",
     "gatsby-plugin-remove-fingerprints": "^0.0.2",
     "gatsby-plugin-robots-txt": "^1.8.0",
